<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Search SMS</string>

    <string name="tab_search">Search</string>
    <string name="tab_backup">Backup</string>
    <string name="tab_analyze">Analyze</string>
    <string name="tab_saved">Saved</string>

    <string name="button_search">Search</string>
    <string name="button_saved">View Saved ></string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="other">Other</string>
    <string name="empty_search">No search results.</string>

    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>

    <string name="button_analyze">Analyze</string>
    <string name="analyze_info">View stats about your texting habits.</string>
    <string name="colRank">Rank</string>
    <string name="colWord">Word</string>
    <string name="colOcc">Occurrences</string>

    <string name="saved">This page doesn\'t work yet.</string>

</resources>
